# AI_app

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.cache/clangd/index/: Agent.cpp.DBBC2A62A8C8A089.idx  Agent.h.7B66AC8330D4CA21.idx  AgentConfig.cpp.E8B1962F33046393.idx  AgentConfig.h.B3E8E4060636C2A5.idx  AgentExecutor.cpp.4E54916443BF552E.idx  AgentExecutor.h.794F83090AC58F47.idx  AsyncHttpClient.cpp.224B7AFFB877F53E.idx  AsyncHttpClient.h.E922E3E31F5045EE.idx  BailianLLM.cpp.1E0A1A1B5C4DF4B7.idx  BailianLLM.h.4206CD7A4FF97008.idx  Buffer.h.60C92F971DF09E97.idx  Buffer.h.A615EF41768E1F80.idx  Channel.h.B08F59834A38C0D8.idx  Channel.h.FF82CA39878C6FF1.idx  ChatDbModels.h.58F9306FBBEB3FCF.idx  ChatHistoryTool.cpp.5AB6CA5E00F5C5D1.idx  ChatHistoryTool.h.FF7A317D73ADE477.idx  ChatMySqlStore.cpp.CC3ECAEF6605932F.idx  ChatMySqlStore.h.7F51D94B8B393664.idx  ChatRouter.cpp.DB43C7302FD0ED5E.idx  ChatRouter.h.24E9515E577CE9BB.idx  ChatService.cpp.6B0D2843F4552EA2.idx  ChatService.h.5E50F82316A05384.idx  CommonRouter.cpp.BD85592D1F3DA0FB.idx  CommonRouter.h.0601A5D570DE866D.idx  CommonService.cpp.E033D491417C3221.idx  CommonService.h.81BBCB31401850B7.idx  DebugRouter.cpp.972F02D33424F8BA.idx  DebugRouter.h.5CA4508C33EB19CB.idx  DefaultToolManager.cpp.28BE16532EB48B99.idx  Dotenv.cpp.B31F2A3EAF56ED8F.idx  Dotenv.h.AED41E0715C6CE91.idx  EmbeddingClient.cpp.56A36C032AA5985D.idx  EmbeddingClient.h.D3466ECCFC47A962.idx  EmbeddingFactory.cpp.744275F7DFC85560.idx  EmbeddingFactory.h.A00575BA3540E54E.idx  Event.h.00FA198818A01E46.idx  EventLoop.h.E3C3720B63ACD4BF.idx  EventLoopThread.h.52A1E4C18C05C4D8.idx  FileCache.cpp.A7EEEB7A55B632F3.idx  (+258 more)
.trae/documents/: agent_resume_and_faq_plan.md
.trae/specs/github-open-source-learning-handbook/: checklist.md  spec.md  tasks.md
.trae/specs/implement-jianzhi-interview-agent/: checklist.md  progress.md  spec.md  tasks.md
config/: agent.config  agent.config.template  ai.env.template  llm_profiles.json.template  mysql.env  mysql.env.template
docs/: learning-handbook.md  resume_cpp_agent_faq.md  resume_project_cpp_agent.md
include/: HttpServer.h
include/agentic/: EmbeddingClient.h  EmbeddingFactory.h  InterviewPipeline.h  InterviewPipelineDefaults.h  QdrantClient.h  RagRetriever.h
include/ai/: BailianLLM.h  LLM.h  LLMFactory.h
include/config/: AgentConfig.h  Dotenv.h
include/router/: ChatRouter.h  DebugRouter.h  IRouter.h  InterviewRouter.h  LoginRouter.h  SettingRouter.h
include/service/: ChatDbModels.h  ChatMySqlStore.h  ChatService.h  InterviewService.h  LoginService.h  MemoryIndexService.h  SettingService.h
scripts/: e2e_full.sh  e2e_smoke.sh
src/: HttpServer.cpp  main.cpp
src/agentic/: EmbeddingClient.cpp  EmbeddingFactory.cpp  InterviewPipeline.cpp  InterviewPipelineDefaults.cpp  QdrantClient.cpp  RagRetriever.cpp
src/ai/: BailianLLM.cpp  LLMFactory.cpp  bailian_smoketest.cpp
src/config/: AgentConfig.cpp  Dotenv.cpp
src/resource/: ai.html  login.html  settings.html
src/resource/assets/: theme.css  theme.js
src/router/: ChatRouter.cpp  DebugRouter.cpp  InterviewRouter.cpp  LoginRouter.cpp  SettingRouter.cpp
src/service/: ChatMySqlStore.cpp  ChatService.cpp  InterviewService.cpp  LoginService.cpp  MemoryIndexService.cpp  SettingService.cpp
test/: bailian_smoketest.cpp  embedding_smoketest.cpp  llm_factory_smoketest.cpp  memory_index_smoketest.cpp  model_switch_smoketest.cpp  qdrant_smoketest.cpp  rag_eval_samples.jsonl  rag_hit_rate_eval.cpp  sendmessage_smoketest.cpp  sse_hold_smoketest.cpp
